[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==3.2.20",
    "django-cors-headers==3.13.0",
    "django-dbbackup==4.0.2",
    "django-extra-fields==3.0.2",
    "django-filter==22.1",
    "django-import-export==4.0.0",
    "django-ordered-model==3.6",
    "django-taggit==3.1.0",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.2.2",
    "drf-spectacular==0.25.1",
    "drf-writable-nested==0.7.0",
    "gunicorn==20.1.0",
    "pillow==9.4.0",
    "psycopg2-binary==2.9.5",
    "requests==2.31.0",
    "xlsxwriter==3.0.7",
    "openpyxl==3.0.10",
    "django-simple-history==3.3.0",
]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "django-debug-toolbar==3.8.1",
    "django-silk==5.0.3",
    "pylint==2.15.10",
    "pylint-django==2.5.3",
    "pytest-django==4.5.2",
]

[tool.black]
target-version = ["py310"]
extend-exclude = """
migrations
"""
